# score-offline-process-template

./: CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_my_offline_process.cpp  score_addon_my_offline_process.hpp
MyOfflineProcess/: MyOfflineProcessFactory.cpp  MyOfflineProcessFactory.hpp
